--- a/posts/templates/base.html
+++ b/posts/templates/base.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <!-- sirve para cargar los archivos CSS y JS necesarios de Quill que vienen con django-quill-editor. -->
     {% include 'django_quill/media.html' %}
+    <style>
+        /* Aumentar el alto del editor Quill */
+        .ql-editor {
+            min-height: 300px;
+        }
+    </style>
+
 </head>
 
 <body class="bg-light">
